--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "framer-motion": "^12.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -25,9 +26,9 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "6.1.1",
     "globals": "^15.14.0",
     "tailwindcss": "^3.4.17",
-    "gh-pages": "6.1.1",
     "vite": "^6.0.5"
   }
 }
