--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "baseUrl": "./",
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules"]
